# musimanager

./: .gitignore  README.md  flake.nix  notes.txt  requirements.txt  shell.nix
db/: default_opts.toml
musiplayer/: Cargo.toml  build.sh
musiplayer/src/: gst_player.rs  lib.rs  libmpv_player.rs  mpv_player.rs
src/: YtDl.py  album.py  artist.py  cui_content_providers.py  cui_handle.py  cui_widgets.py  git_handle.py  helpers.py  interface.py  log.py  main.py  manager.py  musiplayer_setup.py  newpipe_db_handler.py  opts.py  playlistExtractNewpipe.py  song.py  songoManager.py  tracker.py  ui.py  ytmusic.py  ytmusic_manager.py
src/old_stuff/: EZmusicStuff_pydub.py  YtDl.py  playlistExtractNewpipe.py  songoManager.py  ytmusic_manager.py  zip_extract.py
