[package]
name = "musiplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "musiplayer"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.17.*"
gstreamer-player = "0.17.*"
anyhow = "1.0"



[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "serde", "anyhow"]

