[package]
name = "musiplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "musiplayer"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = {version = "0.17", optional = true}
gstreamer-player = {version = "0.17", optional = true}
mpv = {version = "0.2.3", optional = true}
libmpv = {version = "2.0", optional = true}
anyhow = "1.0"



[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "serde", "anyhow"]


[features]
default = ["player-gst"]
# default = ["player-mpv"]
# default = ["player-libmpv"]
player-mpv = ["mpv"]
player-gst = ["gstreamer-player", "gstreamer"]
player-libmpv = ["libmpv"] # didn't impliment this one yet
